fix: update skills header alignment and adjust skills ring width and margin

--- a/src/app/main-component/skills/skills.component.scss
+++ b/src/app/main-component/skills/skills.component.scss
@@ -65,8 +65,7 @@
     font-size: 2.5rem;
     font-weight: 800;
     margin-top: clamp(0.5rem, 1vw, 1rem);
-    display: flex;
-    justify-content: flex-end;
+    text-align: center;
     width: max-content;
   }
 }
@@ -220,7 +219,7 @@
 }
 
 .skills-ring {
-  width: 100%; // Passt sich der H1-Breite an
+  width: calc(20px + 100% + 20px ); // Passt sich der H1-Breite an
   height: 60px;
   background-image: url("/assets/png/Design material/00_Hand-drawn lines/02_Skills/Color option 3.png");
   background-position: center;
@@ -230,7 +229,7 @@
   justify-content: center;
   align-items: center;
   margin-top: -55px;
-  margin-right: -20px;
+  margin-left: -20px;
   clip-path: polygon(50% 50%, 15% 7%, 15% 7%, 15% 7%, 15% 7%, 15% 7%, 15% 7%, 15% 7%, 50% 50%);
   animation: revealCycleFrom10 6s ease-in-out infinite;
 }
